feat: statistics
