# swager/swagger.json
@@ -122,6 +122,25 @@
           }
         }
       }
+    },
+    "/api/v1/statistics/forecast": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   }
 }
